--- a/REANNZ_2020.Rmd
+++ b/REANNZ_2020.Rmd
@@ -706,6 +706,28 @@ Jürgen Hench, Basel, Switzerland ([cancer methylation sequencing](https://gist.
 
 ---
 
+# Hot off the press!
+
+<article class="cf">
+  <div class="fl w-50 bg-white tc">
+    <img src="images/xavnx_phone.png" style="width: 45%; margin-right: 1%; margin-top: 0.5em;"/>
+  </div>
+  <div class="fl w-50 bg-white tc">
+    <img src="images/minknowui.jpg" style="width: 97%; margin-right: 1%; margin-top: 0.5em;"/>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <b>Can now control all of this from our pockets!</b>  
+    <br>
+    <br>
+    Available now on <a href="https://play.google.com/store/apps/details?id=com.nanoporetech.minknowui&hl=en_CA&gl=US" target="blank">Android</a> and <a href="https://apps.apple.com/us/app/minknow/id1504645283" target="blank">iOS</a>
+  </div>
+</article>
+
+---
+
 # Let's take a tour...
 
 <p style="border:solid thick grey; border-radius: 0.5em; 
